--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.16.1
-yarn_version=1.16.1+build.21
+minecraft_version=1.16.2-pre1
+yarn_version=1.16.2-pre1+build.5
 loader_version=0.9.0+build.204
 
 name=ironrust
 version=0.1.0
 group=io.github.sjx233
 
-fabric_version=0.16.0+build.384-1.16.1
-libstructure_version=1.3
+fabric_version=0.16.3+build.390-1.16
+libstructure_version=1.4.1
