--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.16.2-pre3
-yarn_version=1.16.2-pre3+build.2
-loader_version=0.9.0+build.204
+minecraft_version=1.16.2-rc1
+yarn_version=1.16.2-rc1+build.4
+loader_version=0.9.1+build.205
 
 name=ironrust
 version=0.1.0
 group=io.github.sjx233
 
-fabric_version=0.16.4+build.392-1.16
+fabric_version=0.17.0+build.393-1.16
 libstructure_version=1.4.1
