--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.16.2-rc1
-yarn_version=1.16.2-rc1+build.6
+minecraft_version=1.16.2
+yarn_version=1.16.2+build.1
 loader_version=0.9.1+build.205
 
 name=ironrust
 version=0.1.0
 group=io.github.sjx233
 
-fabric_version=0.17.1+build.394-1.16
+fabric_version=0.17.2+build.396-1.16
 libstructure_version=1.4.1
