--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ group = project.group
 
 repositories {
   maven { url = "https://dl.bintray.com/earthcomputer/mods" }
+  maven { url = "https://jitpack.io" }
 }
 
 dependencies {
@@ -20,6 +21,7 @@ dependencies {
   modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
   modImplementation "net.earthcomputer:libstructure:${project.libstructure_version}"
   include("net.earthcomputer:libstructure:${project.libstructure_version}")
+  modRuntime("com.github.SuperCoder7979:databreaker:${project.databreaker_version}")
 }
 
 processResources {
