--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ dependencies {
   modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
   modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
   modImplementation "net.earthcomputer:libstructure:${project.libstructure_version}"
-  include("net.earthcomputer:libstructure:${project.libstructure_version}")
-  modRuntime("com.github.SuperCoder7979:databreaker:${project.databreaker_version}")
+  include "net.earthcomputer:libstructure:${project.libstructure_version}"
+  modRuntime "com.github.SuperCoder7979:databreaker:${project.databreaker_version}"
 }
 
 processResources {
