--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.16.3
-yarn_version=1.16.3+build.47
-loader_version=0.10.5+build.213
+minecraft_version=1.16.4
+yarn_version=1.16.4+build.6
+loader_version=0.10.6+build.214
 
 name=ironrust
 version=0.1.0
 group=io.github.sjx233
 
-fabric_version=0.24.1+build.412-1.16
-databreaker_version=0.2.6
+fabric_version=0.25.1+build.416-1.16
+databreaker_version=715b589
